# factory-2z

./: .prettierrc  README.md
backend/: .gitignore  CMakeLists.txt  compile_flags.txt  config.json
backend/include/: database.h  mqtt_listener.h  tables.h  util.h  websocket_server.h
backend/scripts/: db.sql  telemetry_simulator.py
backend/src/: broker_manager.cpp  database.cpp  main.cpp  mqtt_listener.cpp  sensor_receiver.cpp  util.cpp  websocket_server.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  theme.css  theme.ts
frontend/src/api/: api.ts  telemetry.ts
frontend/src/components/: DetailsPane.tsx  IncidentTerminal.tsx  MetricChart.tsx  StatusBar.tsx  TelemetryPanel.tsx
frontend/src/engine/: Connections.tsx  RectangleSelector.tsx  Scene.tsx  SceneLoader.tsx  SceneObject.tsx
frontend/src/hooks/: useTelemetry.ts  useWarnings.ts
frontend/src/state/: SelectionContext.tsx  sceneObjectsStore.ts  selectionContextValue.ts  useSelection.ts  warningsStore.ts
frontend/src/types/: scene.ts  telemetry.ts
